Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o 18282 2017-10-06 michele
   added IPv6 support by adding HelperIPv6And4.java and using it when parsing urls.

 o 18279 2017-08-10 michele
   fixed DB leak when logging out with more entries than the cache in callback queue

 o 18277 2017-07-14 michele
   Replication: added a getter for SqlRow

 o 18276 2017-07-14 michele
   handling multiple SSL certificates (if the client has to use another) 

 o 18275 2017-07-14 michele
   logging all threads in case of a concurrent exception leading to panic 

 o 18273 2017-07-02 marcel
   QosData.hasClientProperty() added
   SessionInfo.removeUserObject() added
   DropIfNotDeliverableUniqueOnly.useTimestampCheck configuration property added
   
 o 18270 18271 18272 2017-06-22 marcel
 Introduced SubscribeQos KEY_BOUNCE_CP = "_bounce:"
 ClientProperties with this prefix are bounced back with SubscribeReturnQos

 o 18267 2017-05-29 marcel
 Fixed DropIfNotDeliverableUniqueOnly md5sum check to avoid updates
 
 o 18266 2017-05-19 marcel
 Fixed race condition in QosData which could lead to ConcurrentModificationException during dead messages

 o 18264 2017-05-11: fixed ServerDispatchManager.shutdown since it generated an exception on explicit logouts
 
 o 18261 2017-05-08: after exception leading to DEAD callback status the transient sessions where reconnected but did not get any updates anymore.
   This has now been fixed by shutting down the session info so that a reconnect leads to a new session info and thereby a new session
 
 o 18257 2017-03-21 Fixed BlockingQueueWrapper.java to not peek any more with danger of loop

 o 18256 made the callback queue block (default 1 minute) in case the thread pool is exhausted. It
   can be configured with:
      dispatch/callback/maxWaitTime 60000
   and should be used in conjunction with a customized specific pool size: